[package]
name = "pyspark-arrow-rs"
version = "0.4.0"
edition = "2021"
authors = ["Loh Jia Long <jlloh89@gmail.com>"]
repository = "https://github.com/jlloh/pyspark-arrow-rs"
description = """
Derive macros to be used to add some helper functions to Rust structs to make them useable in Pyspark's mapInArrow
"""
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.64"
serde_arrow = { version = "0.13.4", features = ["arrow-51"]}
serde = { version = "1.0", features = ["derive"] }
pyspark-arrow-rs-impl = {path = "./impl", version="0.2.0"}

[dependencies.arrow]
version = "51.0.0"
features = ["pyarrow"]

[workspace]
members = ["impl"]
