[package]
name = "pyspark-arrow-rs-impl"
version = "0.2.0"
edition = "2021"
authors = ["Loh Jia Long <jlloh89@gmail.com>"]
repository = "https://github.com/jlloh/pyspark-arrow-rs"
description = """
Internal implementation of proc macros for pyspark-arrow-rs
"""
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
